# XReflection

./: LICENSE  README.md  dockerfile  start.sh
project/: CMakeLists.txt  build.sh
project/XReflection/: CMakeLists.txt  Run_Test.sh
project/XReflection/Include/: Instructions.txt  XReflection.h  XReflectionClassFactory.h  XReflectionDebug.h  XReflectionImpl.h  XReflectionJSONImpl.h  XReflectionJSONextensions.h  XReflectionTypes.h
project/XReflection/Linux/: CMakeLists.txt
project/XReflection/Linux/TestApp/: CMakeLists.txt  LinuxReflectionTest.cpp  LinuxReflectionTest.h
